--- a/client/translations/fr.json
+++ b/client/translations/fr.json
@@ -141,6 +141,8 @@
   "invalidErrorKey": "Le {{fieldName}} est invalide",
   "invalidAddressErrorKey": "L'adresse entrée n'est pas correctement reconnue. Merci d'entrer le champ à nouveau",
   "userShouldBeActivatedErrorKey": "Ton compte n'a pas encore été activé. Clique sur le lien qui t'as a été envoyé par mail à l'inscription pour pouvoir passer commande.",
+  "maskErrorKey": "Le numéro de téléphone entré n'est pas au format correct (ex: 0612345678)",
+  "passwordsMustBeDifferentErrorKey": "Le nouveau mot de passe doit être différent de ton mot de passe actuel!",
 
   "noNetwork": "Pas de réseau !",
   "noNetworkDetails": "Aucune connexion internet...",
