change text for closed restaurants under foodrsuh slider

--- a/client/translations/fr.json
+++ b/client/translations/fr.json
@@ -90,6 +90,7 @@
   "predefinedAddress": "Lieu commun",
   "emptyCart": "Le panier est vide.",
   "howLongFoodRush" : "Quelle durée souhaites-tu pour le",
+  "whenToOrder": "A quelle heure souhaites-tu passer ta commande ?",
   "min": "min",
   "comment": "Ajoute ici un commentaire sur ta commande !",
   "quantity" : "Quantité",
